feat: complete PharmaTrust implementation - all panels, security fixes, blockchain, AI verification